# Doc2MD

./: Makefile  PROJECT_SPEC.md  README.md  cli.py  code_block_demo.py  debug_code_scraping.py  debug_your_issue.py  debug_your_issue_final.py  demo.py  demo_exclude_urls.py  demo_markdown_syntax.py  demo_missing_first_lines_fix.py  demo_path_restriction.py  demo_triple_backticks_fix.py  investigate_html_structure.py  pyproject.toml  requirements.txt  setup.py  test_code_block_fix.py  test_code_blocks.py  test_complete_code_block_fix.py  test_empty_code_blocks.py  test_exact_html_structure.py  test_html2text_fix.py  test_missing_first_lines_fix.py  test_token_optimization.py  test_your_html_structure.py
debug_output/: NAVIGATION.md  README.md  adk-docs.md
debug_output/adk_docs/agents/: README.md  adk-docs_agents_config.md
doc2md/: __init__.py  converter.py  crawler.py  link_tree.py  markdown_generator.py
examples/: advanced_usage.py  basic_usage.py  quick_try.py
tests/: test_converter.py  test_exclude_urls.py  test_path_restriction.py
